--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-uglify": "^0.5.1",
     "grunt-screeps": "^1.2.0"
   }
 }
