Add new v3 project in typescript to build! Start using screeps branches -- default task pushes to sim branch for testing, prod pushes to stable branch which main is running

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-uglify": "^0.5.1",
-    "grunt-screeps": "^1.2.0"
+    "grunt-screeps": "^1.2.0",
+    "grunt-ts": "^5.3.2"
+  },
+  "dependencies": {
+    "screeps-typescript-declarations": "^1.2.2"
   }
 }
